--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1600,3 +1600,14 @@ eprint = {https://doi.org/10.1121/1.4986647}
  year={2008},
  publisher={Springer}
 }
+
+@article{splitvaliddata,
+author = {Xu, Yun and Goodacre, Royston},
+year = {2018},
+month = {10},
+pages = {},
+title = {On Splitting Training and Validation Set: A Comparative Study of Cross-Validation, Bootstrap and Systematic Sampling for Estimating the Generalization Performance of Supervised Learning},
+volume = {2},
+journal = {Journal of Analysis and Testing},
+doi = {10.1007/s41664-018-0068-2}
+}
