--- a/latex/report.tex
+++ b/latex/report.tex
@@ -4,6 +4,7 @@
 \usepackage[shortlabels]{enumitem}
 \usepackage{graphicx}
 \usepackage{xfrac}
+\usepackage{afterpage}
 \usepackage{todonotes}
 \usepackage{amsmath}
 \usepackage[titletoc,title]{appendix}
