--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1611,3 +1611,20 @@ volume = {2},
 journal = {Journal of Analysis and Testing},
 doi = {10.1007/s41664-018-0068-2}
 }
+
+@inproceedings{cupy,
+  author       = "Okuta, Ryosuke and Unno, Yuya and Nishino, Daisuke and Hido, Shohei and Loomis, Crissman",
+  title        = "CuPy: A NumPy-Compatible Library for NVIDIA GPU Calculations",
+  booktitle    = "Proceedings of Workshop on Machine Learning Systems (LearningSys) in The Thirty-first Annual Conference on Neural Information Processing Systems (NIPS)",
+  year         = "2017",
+  url          = "http://learningsys.org/nips17/assets/papers/paper_16.pdf"
+}
+
+@article{cuda,
+author = {Nickolls, John and Buck, Ian and Garland, Michael and Skadron, Kevin},
+title = {Scalable Parallel Programming with CUDA},
+journal={ACM Queue},
+volume={6},
+number={2},
+year={2008},
+pages={40--53}}
