--- a/latex/ch3_methodology.tex
+++ b/latex/ch3_methodology.tex
@@ -145,73 +145,59 @@ Choosing an incorrect slice length which can't support the windows needed to sup
 
 The reference NSGT/sliCQT library uses NumPy (\cite{numpy}), a CPU-based Python numerical computation library. To train deep neural networks efficiently, using PyTorch with GPU support is required (\cite{pytorch}). PyTorch, in addition to being a deep learning framework, is also a numerical computation library which implements a large amount of NumPy's functions (\cite{pytorch}).
 
-The line-profiler\footnote{\url{https://pypi.org/project/line-profiler/}} package for Python prints a line-by-line output of the execution times of Python functions that you annotate with \Verb#@profile#, and it was used to find performance hotspots and bottlenecks in the NSGT library. An example output is shown in listing \ref{lst:profilerout}, showing what the most costly functions of the reference forward transform are.
+The line-profiler\footnote{\url{https://pypi.org/project/line-profiler/}} package for Python prints a line-by-line output of the execution times of Python functions that you annotate with \Verb#@profile#, and it was used to find performance hotspots and bottlenecks in the NSGT library. An example output is shown in listing \ref{lst:profilerout} for the \Verb#forward# function of the sliced NSGT in the reference library.
 
 \begin{listing}[h]
   \centering
-\begin{minted}[numbersep=\mintednumbersep,linenos,mathescape=true,breaklines,frame=single,escapeinside=||]{text}
+\begin{minted}[numbersep=\mintednumbersep,linenos,mathescape=true,breaklines,frame=single,escapeinside=||,fontsize=\scriptsize]{text}
 Line #      Hits         Time  Per Hit   % Time  Line Contents
 ==============================================================
    150                                               @profile
    151                                               def forward(self, sig):
-   152                                                   'transform - s: iterable sequence of sequences'
+   152         1          4.0      4.0      0.0          sig = self.channelize(sig)
    153
-   154         1          4.0      4.0      0.0          sig = self.channelize(sig)
+   154         1          1.0      1.0      0.0          f_sliced = slicing(sig, self.sl_len, self.tr_area)
    155
-   156                                                   # Compute the slices (zero-padded Tukey window version)
-   157         1          1.0      1.0      0.0          f_sliced = slicing(sig, self.sl_len, self.tr_area)
-   158
-   159         1      19481.0  19481.0     19.5          cseq = chnmap(self.fwd, f_sliced)
-   160
-   161         1      80658.0  80658.0     80.5          cseq = arrange(cseq, self.M, True)
-   162
-   163         1          3.0      3.0      0.0          cseq = self.unchannelize(cseq)
-   164
-   165         1          1.0      1.0      0.0          return cseq
+   156         1      19481.0  19481.0     19.5          cseq = chnmap(self.fwd, f_sliced)
+   157
+   158         1      80658.0  80658.0     80.5          cseq = arrange(cseq, self.M, True)
+   159
+   160         1          3.0      3.0      0.0          cseq = self.unchannelize(cseq)
+   161
+   162         1          1.0      1.0      0.0          return cseq
 \end{minted}
-  \caption{Suggested slice and transition lengths based on the desired frequency scale}
-  \label{code:slicenoslice}
+  \caption{Example line profiler output}
+  \label{lst:profilerout}
 \end{listing}
 
-The starting point of porting the library to the GPU is to simply replace all NumPy functions with their PyTorch equivalents. When refering to code changes, NumPy and PyTorch will be referred to as numpy and torch, their respective Python module names. The torch port to the NSGT/sliCQT can be viewed on GitHub through the commit browser, starting from the following commit.\footnote{\url{https://github.com/sevagh/nsgt/commits/main?after=9aed369865989d90664445c3a6f74843be62f778+34&branch=main}} Figure \ref{fig:ghcommitbrowser} shows how to use the GitHub UI to examine the code changes made in each commit.
+The starting point of porting the library to the GPU was to simply replace all NumPy functions with their PyTorch equivalents. When refering to code changes, NumPy and PyTorch will be referred to as numpy and torch, their respective Python module names. The torch port to the NSGT/sliCQT can be viewed on GitHub through the commit browser, starting from the following commit.\footnote{\url{https://github.com/sevagh/nsgt/commits/main?after=9aed369865989d90664445c3a6f74843be62f778+34&branch=main}} Figure \ref{fig:ghcommitbrowser} shows how to use the GitHub UI to examine the code changes made in each commit.
 
-\afterpage{
 \begin{figure}[!ht]
 	\centering
-	\subfloat[GitHub commit browser]{\includegraphics[width=0.75\textwidth]{./images-misc/ghcommitbrowser.png}}\\
-	\subfloat[View file and line changes in each commit]{\includegraphics[width=0.75\textwidth]{./images-misc/ghcommitsingle.png}}
-	\caption{How to browse the individual steps of the torch port\protect\footnotemark}
+	\subfloat[GitHub commit browser]{\includegraphics[width=0.65\textwidth]{./images-misc/ghcommitbrowser.png}}\\
+	\subfloat[View file and line changes in each commit]{\includegraphics[width=0.65\textwidth]{./images-misc/ghcommitsingle.png}}
+	\caption{How to browse the individual steps of the torch porting effort}
 	\label{fig:ghcommitbrowser}
 \end{figure}
-\footnotetext{\url{https://github.com/sevagh/nsgt/commits/main?after=9aed369865989d90664445c3a6f74843be62f778+34&branch=main}}
-}
 
 An excerpt of the change is shown in listing \ref{code:firstdiff}. 
 
 \begin{listing}[ht]
   \centering
-\begin{inputminted}[linenos,breaklines,frame=single]{text}{./diffs/diff1.txt}
+\begin{inputminted}[linenos,breaklines,frame=single,fontsize=\scriptsize]{text}{./diffs/diff1.txt}
 \end{inputminted}
-  \caption{Example changes of porting from numpy to torch}
+  \caption{Simple examples of porting from numpy to torch}
   \label{code:firstdiff}
 \end{listing}
 
-Next, the list and generator for the forward operation of the transform, which is one of the performance hotspots, are converted to a preallocated tensor, shown in listings \ref{code:seconddiff1} and \ref{code:seconddiff2}. The significant commit which introduced this change is here.\footnote{\url{https://github.com/sevagh/nsgt/commit/49a70d112ba4091d271a9438a8c38cf380ce62b4}}
+Next, the list and generator for the forward operation of the transform, which is one of the performance hotspots, were converted to a preallocated tensor, shown in the listing \ref{code:seconddiff}. The significant commit which introduced this change is here.\footnote{\url{https://github.com/sevagh/nsgt/commit/49a70d112ba4091d271a9438a8c38cf380ce62b4}}
 
 \begin{listing}[ht]
   \centering
-\begin{inputminted}[linenos,breaklines,frame=single]{text}{./diffs/diff2_1.txt}
+\begin{inputminted}[linenos,breaklines,frame=single,fontsize=\scriptsize]{text}{./diffs/diff2.txt}
 \end{inputminted}
-  \caption{For-loop and generator-based design of the forward NSGT}
-  \label{code:seconddiff1}
-\end{listing}
-
-\begin{listing}[ht]
-  \centering
-\begin{inputminted}[linenos,breaklines,frame=single]{text}{./diffs/diff2_2.txt}
-\end{inputminted}
-  \caption{Torch tensor conversion of the forward NSGT}
-  \label{code:seconddiff2}
+  \caption{Excerpt of the conversion of lists, for loops, and generators of the forward NSGT to torch tensors and parallel matrix operations}
+  \label{code:seconddiff}
 \end{listing}
 
 \newpagefill
